# comfydl

./: .gitignore  LICENSE  MODEL_SOURCE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
comfydl/: civitai.py  config.py  main.py  registry.py  utils.py
comfydl/model_sources/: flux.yaml  flux1_dev_fp8.yaml  ipadapters.yaml  qwen_image.yaml  qwen_image_controlnet.yaml  qwen_image_gguf.yaml  z_image.yaml
